[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cse355-machine-design"
version = "0.1.2"
authors = [{ name = "Saajan Maslanka", email = "academia@saajanm.com" }]
description = "A python library to allow students to complete machine design problems in ASU's CSE 355 Online offering"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = ["render-html"]

[project.urls]
"Homepage" = "https://github.com/DaymudeLab/CSE355-MachineDesign"
"Bug Tracker" = "https://github.com/DaymudeLab/CSE355-MachineDesign/issues"
