[tool.poetry]
name = "cse355-machine-design"
version = "0.3.0"
description = "Automata and Turing machine library for ASU's CSE 355."
authors = [
    "Saajan Maslanka <academia@saajanm.com>",
    "Josh Daymude <jdaymude@asu.edu>"
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/DaymudeLab/CSE355-MachineDesign"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
render-html = "^1.0.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/DaymudeLab/CSE355-MachineDesign/issues"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
